# pabl-srfc37

./: Cargo.toml  codama.ts  package.json  pnpm-lock.yaml
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml  idl.json
program/src/: error.rs  lib.rs
program/src/instructions/: add_wallet.rs  can_thaw_permissionless.rs  create_list.rs  delete_list.rs  init_list.rs  mod.rs  remove_wallet.rs  setup_extra_metas.rs
program/src/state/: list_config.rs  mod.rs  wallet_entry.rs
sdk/rust/: Cargo.toml
sdk/rust/tests/: allow_eoa_list_test.rs  allow_list_test.rs  basic.rs  block_list_test.rs  composite_list_test.rs  program_test.rs
sdk/ts/src/accounts/: index.ts  listConfig.ts
sdk/ts/src/instructions/: freezePermissionless.ts  index.ts  thawPermissionless.ts
sdk/ts/src/pdas/: index.ts  mintConfig.ts  thawExtraMetasAccount.ts
sdk/ts/src/programs/: index.ts
