[package]
name = "allow-block-list"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "block_list"

[dependencies]
bytemuck = "1.23.0"
pinocchio = "0.9.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-log = "0.5.0"
spl-discriminator = "0.4.0"
spl-tlv-account-resolution = "0.10.0"

ebalts-interface = { git = "https://github.com/tiago18c/ebalts" }
ebalts = { git = "https://github.com/tiago18c/ebalts", features = [
    "no-entrypoint",
] }
solana-curve25519 = "2.2.1"