[package]
name = "allow-block-list-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "allow_block_list_client"

[features]
default = []
serde = []
fetch = []
anchor = []
anchor-idl-build = []

[dependencies]
solana-program = "2.2.1"
kaigan = ">=0.2.6"
borsh = "^0.10"
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
litesvm = "0.6.1"
solana-program-runtime = { workspace = true }
solana-instruction = { workspace = true }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-client  = { workspace = true }
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
solana-compute-budget-interface = "2.2.1"
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-msg = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-program-entrypoint = { workspace = true }
spl-discriminator = { workspace = true }
spl-program-error = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }
spl-pod = { workspace = true }
thiserror = "2.0"
borsh = "^0.10"
token-acl-interface = { workspace = true }
token-acl = { workspace = true }
token-acl-client = { workspace = true }